# calculator

./: CMakeLists.txt
data/: calculator.gresource.xml
data/calculator/: style.css  window.ui
data/calculator/applications/: com.github.TarekSaeed0.calculator.desktop
header/calculator/: app.h  application.h  evaluate.h
include/calculator/: application.h  evaluate.h  ratio.h
resource/: calculator.gresource.xml  calculator.ui
resource/calculator/: style.css  window.css  window.ui
resource/calculator/applications/: calculator.desktop
source/: main.c
source/calculator/: app.c  application.c  evaluate.c
src/calculator/: application.c  evaluate.c  ratio.c
